@@ -63,6 +63,10 @@ ActiveRecord::Schema.define do
     # TODO: Add some different native binary types and test.
   end
   
+  create_table :sql_server_edge_schemas, :force => true do |t|
+    t.string :description
+  end
+  
   execute "IF EXISTS (SELECT TABLE_NAME FROM INFORMATION_SCHEMA.VIEWS WHERE TABLE_NAME = 'customers_view') DROP VIEW customers_view"
   execute <<-CUSTOMERSVIEW
     CREATE VIEW customers_view AS
